# scrubber-sim

./: .gitignore  LICENSE  README.md
scrubber_sim/: .gitignore  CMakeLists.txt  a8_run.sh  area_7x7.yaml  area_nobox.yaml  diag_recorder.py  gen_coverage_goal.py  m5_clean.sh  odom_recorder.py  package.xml  parse_bag.py
scrubber_sim/config/: ackermann_bt.xml  coverage.yaml  coverage_recovery_bt.xml  nav2.yaml  slam_toolbox.yaml
scrubber_sim/launch/: bringup.launch.py  m5.launch.py  nav2.launch.py  slam.launch.py
scrubber_sim/scrubber_sim/: wheel_odometry.py
scrubber_sim/urdf/: scrubber.urdf.xacro
scrubber_sim/worlds/: room_7x7.sdf  room_nobox.sdf  simple_world.sdf
tools/scrubber-sim/: .gitignore  README.md
tools/scrubber-sim/ackermann_primitives/: README.md  __init__.py  boustrophedon.py  calibration.py  cli.py  primitives.py  ros_path.py
tools/scrubber-sim/contour_coverage/: README.md  __init__.py  cli.py  geometry.py  path_builder.py  ros_bridge.py
tools/scrubber-sim/coverage_meter/: coverage_meter.py
tools/scrubber-sim/map_to_polygons/: map_to_polygons.py
tools/scrubber-sim/path_linter/: README.md  __init__.py  __main__.py  path_linter.py
tools/scrubber-sim/tests/: test_ackermann_boustrophedon.py  test_ackermann_calibration.py  test_ackermann_export_cli.py  test_ackermann_primitives.py  test_area_builder.py  test_contour_coverage.py  test_coverage_meter.py  test_map_to_polygons.py  test_path_linter.py  test_ros_bridge.py  test_wall_follower.py
tools/scrubber-sim/wall_follower/: __init__.py  area_builder.py  closure.py  follower.py  scan_utils.py
(+9 files in other folders)
